elastic/cnp-allow-only-default-elastic-ports.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-allow-only-default-elastic-ports
  namespace: default  #change default namespace to match your namespace
spec:
  description: "To block all ports except 9200 and 9300 in elastic pod"
  endpointSelector:
    matchLabels:
      app: elasticsearch      #change app: elasticsearch to match your label
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "9200"     #change port values to match your ports
        - ports:
            - port: "9300"
